tests/error/array_multi_oob.gw
#! [contains] ArrayOutofBounds
Object o[1][1];
o[1];
